--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "axios": "1.13.2",
     "execa": "9.6.1",
     "form-data": "^4.0.5",
-    "fs-extra": "11.3.2"
+    "fs-extra": "11.3.2",
+    "glob": "^13.0.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
